plugins {
    id 'jacoco'
    id 'io.spring.dependency-management' version '1.1.0'
    id 'org.springframework.boot' version '3.3.6'//Versión de componentes de spring boot
    id 'org.sonarqube' version '4.0.0.2929'
    id "org.owasp.dependencycheck" version "8.1.2"
    id 'com.github.ben-manes.versions' version '0.46.0'
    id 'java'
}

group 'com.proyecto.servicio.empresa'
version '1.0'

java{
    sourceCompatibility=17
    targetCompatibility=17
}

repositories {
    mavenCentral()
}


dependencies {
    //Spring Framework
    implementation 'org.springframework.cloud:spring-cloud-config-client:4.1.4'
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.4'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    //Documentation y APIs

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0' //RevisarCompatibilidad
    //Bases de datos
    implementation 'org.postgresql:postgresql:42.7.3'
    implementation 'org.flywaydb:flyway-core'
    implementation 'org.flywaydb:flyway-database-postgresql'
    implementation 'com.oracle.database.jdbc:ojdbc8:23.2.0.0'
    implementation 'com.oracle.database.jdbc:ucp:23.2.0.0'
    // implementation 'org.hibernate:hibernate-core:6.2.7.Final'
    implementation 'org.hibernate:hibernate-core:6.5.3.Final'
    implementation 'io.lettuce:lettuce-core:6.5.1.RELEASE'
    //Seguridad
    //implementation 'io.jsonwebtoken:jjwt:0.9.1'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    implementation 'com.auth0:jwks-rsa:0.22.1'
    implementation 'com.auth0:java-jwt:4.4.0'
    //Utilerias Apache Commons
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation 'commons-fileupload:commons-fileupload:1.5'
    implementation 'commons-io:commons-io:2.18.0'
    //implementation 'org.apache.httpcomponents:httpclient:4.5.14'
    implementation 'org.apache.httpcomponents.client5:httpclient5:5.4.1'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    //Serialización
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.json:json:20231013'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml'
    //Utilerias Google
    implementation 'com.google.api-client:google-api-client:2.7.1'
    implementation 'com.google.api-client:google-api-client-jackson2:2.7.1'
    //Mail-XML
    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.3'
    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
    //Soporte adicional  herramientas de desarrollo
    implementation 'org.apache.opennlp:opennlp-tools:2.2.0'
    implementation 'org.projectlombok:lombok:1.18.30'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
    testCompileOnly 'org.projectlombok:lombok:1.18.30'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mockito:mockito-inline:5.1.1'
    testImplementation 'com.h2database:h2:2.2.220'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

configurations.all {
    exclude group: "org.apache.logging.log4j", module: "log4j-api"
    exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
    exclude group: "log4j", module: "log4j"
}

test {
    useJUnitPlatform()
}

springBoot {
    buildInfo {
    }
}

sonarqube {
    properties {
        property "sonar.exclusions", "**/App.java,**/model/**,**/entity/**,**/enums/**,**/config/**,**/controller/**,**/service/configuracion/**"
    }
}
jacocoTestReport {
    reports {
        reports {
            xml.required=true
        }
    }
}

//ejecutar applicación dentro de contenedor
//sh gradlew clean build dockerImage dockerUp
/**
 * Genera imagen
 */
task dockerImage(type: Exec) {
    println 'CrearImagen'
    commandLine "docker", "build", "-t", "proyecto-core:0.1", "$projectDir"
}

/**
 * Ejecuta imagen
 */
task dockerUp(type: Exec) {
    println "Arranca imagen"
    commandLine "docker-compose", "--compatibility", "up"
}

dependencyCheck {
    formats = ["JSON", "HTML"]
}